apps/vaultwarden/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.37.1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 32Mi
            limits:
              memory: 64Mi
          volumeMounts:
            - name: data-volume
              mountPath: /data
              subPath: vaultwarden
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
